# stone-model-rs

./: .gitignore  Cargo.toml
analysis/: mem.py  plot_flight.py  plotting.py  util.py
examples/: affine.rs  benchmark.rs  grid_search.rs  linear.rs  logistic.rs  logistic_amp.rs  reference.rs  weights.rs
src/: lib.rs  movement.rs  stats.rs  util.rs
src/model/: connectomics.rs  constants.rs  memory.rs  mod.rs  network.rs
