[package]
name = "stone_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"
nalgebra = "0.32"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
itertools = "0.12.0"
tqdm = "0.6.0"
rayon = "1.8.0"
